--- a/app/globals.css
+++ b/app/globals.css
@@ -161,3 +161,38 @@ border-radius:20px;
 .btn-ghost:hover {
   background: var(--bg-muted);
 }
+/* HTML: <div class="loader"></div> */
+.loader {
+  width: 20px;
+  display: inline-block;
+  padding: 4px;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  background: #fbfbfb;
+  --_m: 
+    conic-gradient(#0000 10%,#fbfbfb),
+    linear-gradient(#1aa6a4 0 0) content-box;
+  -webkit-mask: var(--_m);
+  mask: var(--_m);
+  -webkit-mask-composite: source-out;
+  mask-composite: subtract;
+  animation: l3 1s infinite linear;
+}
+@keyframes l3 {
+  to {
+    transform: rotate(360deg);
+  }
+}
+.loader-simple {
+  width: 40px;
+  height: 40px;
+  border: 4px solid var(--primary);
+  border-top: 4px solid transparent;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
